GH-1929: Fix BatchInterceptor
Resolves https://github.com/spring-projects/spring-kafka/issues/1929

Need to rebuild the record list after interception (when `interceptBeforeTx` is false).

Otherwise changes made to the records in the `ConsumerRecords` is lost.

Always intercept early when transactions are not used; rebuild list if transactions in
use, `interceptBeforeTx` is false, and a batch interceptor is present.

**cherry-pick to 2.7.x**